@@ -1,5 +1,10 @@
 $Id$
 
+2014-06-22  Christian Franke  <franke@computer.org>
+
+	atacmds.cpp, ataprint.cpp: Improve messages for unsupported SMART Status
+	command.
+
 2014-06-21  Christian Franke  <franke@computer.org>
 
 	drivedb.h:
